<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.kokomi.preference.user.ui.UserFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/theme_light"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:background="#00000000">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_user_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:cardCornerRadius="32dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_user_img"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@null" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/not_login"
                    android:textColor="@color/theme_dark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ll_user_follow"
                    app:layout_constraintStart_toEndOf="@id/cv_user_img"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_user_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_user_fans">

                    <TextView
                        android:id="@+id/tv_user_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/theme_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/follow"
                        android:textColor="@color/theme_dark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_user_fans"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tv_user_fans"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/theme_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fans"
                        android:textColor="@color/theme_dark" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/theme_light"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_user_recent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@null" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_user_recent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/recent_playlists"
                        android:textColor="@color/theme_dark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_user_download"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="128dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@null" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_user_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/download"
                        android:textColor="@color/theme_dark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_user_friends"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="128dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@null" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_user_friends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/friends"
                        android:textColor="@color/theme_dark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_user_favorite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="128dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@null" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_user_favorite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/favorite_playlists"
                        android:textColor="@color/theme_dark" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.example.common.widget.MusicSheetListView
            android:id="@+id/slv_user_creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</layout>